fixed z-index for nav bar

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -36,7 +36,7 @@
 	height:50px;
 	width:100%;
 	background-color: black;
-	z-index: 9999;
+	z-index: 950;
 }
 
 .prod_title {
